# t2-inversion-agent

./: .gitignore  AGENTS.md  AI_for_Geophysics智能体会议纪要_整理版.md  DEPLOYMENT.md  README.md  requirements.txt  streamlit_app.py
.streamlit/: config.toml
T2process/: LICENSE  README.md  main.ipynb  pyproject.toml
T2process/Example data/: ExperimentalDecay.xlsx  SimulationDecay.xlsx
T2process/legacy/: gaussian_decomposition_functions.py  inversion_functions.py  plot_nmr_t2.py  run_nnls.py  run_nnls_lcurve.py
T2process/nmr_t2/: __init__.py  config.py  gaussian.py  io_utils.py  lcurve.py  models.py  nnls.py  pipelines.py  plotting.py
t2_agent/: __init__.py  agent.py  deepseek.py  guidance.py  i18n.py  models.py  skills.py  tools.py
tests/: test_agent_tool_loop.py  test_i18n.py  test_streamlit_rendering.py  test_t2_agent.py
